シャッフルを実装

--- a/TODO.txt
+++ b/TODO.txt
@@ -15,3 +15,7 @@ FAILEDは要らないか？REVERSEが継続すれば済む話。
 失敗してからめくったカードの反転が始まるまでに1～2秒くらい欲しい。
 
 まあ、単純にした方がいいかな・・そんな複雑なの作りたくないし思いつかないですから・・
+
+Correct!で青い文字。Failed...で赤い文字。表示される間にカードが反転したりする感じ。
+こういうの全部state処理で他の操作できないようにする。つまり、
+PLAYのときしかカードめくり出来ないように・・
