カードの情報を辞書にまとめる

--- a/TODO.txt
+++ b/TODO.txt
@@ -19,3 +19,24 @@ FAILEDは要らないか？REVERSEが継続すれば済む話。
 Correct!で青い文字。Failed...で赤い文字。表示される間にカードが反転したりする感じ。
 こういうの全部state処理で他の操作できないようにする。つまり、
 PLAYのときしかカードめくり出来ないように・・
+
+変数stock: 初期値は-1で、カードをめくるとその数（0～9）が記録される。
+同時にその変数のあった場所も記録しておくべき（pos）。
+その状態でめくれていないカードをめくると照合が行われる。
+照合の結果、一致すればめくれたままそのまま。
+一致しなければそれらのカードは元に戻る。だから位置の記録が必要。
+
+state REVERSEって要らないね・・countが正かどうかでバリデーションかければ済む話。
+
+とりあえず、めくれてるカードはクリックしても戻らないようにするか・・（その操作は存在しえないので）
+ん？？
+あ、そうか、クリックでは戻らないけど、自動的に戻るんだっけ。
+
+今、クリックの後が単に「reverse_anim」ってなってて、ここを、
+・stockが空の時：めくったカードの位置と種類を記録してreverse_anim」
+・stockが埋まってる時：照合して、合ってる場合→めくる、合ってる！のインターバル（表示、得点加算）、次の操作。
+間違ってる場合→間違ってる！のインターバル、元に戻す１、元に戻す２。
+いずれの場合もstockは空にする（リセット）
+こういうのクラスで書くと楽そうだな・・てかPygameならこういうの簡単に作れるんじゃない・・
+
+最後に、リセットボタンを用意したい。
