カードの描画方法を修正、取ったカードが消えるようにする

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,46 +1,3 @@
-カードに「got」属性を設けて（これクラスとかの方がいいのかな・・）、
-取られた場合はもうクリックしても反応しないようにバリデを設ける。
-ってやらなくても、めくれたカードはクリックしても反応しないようにすればOK.
-
-2枚めくってはずれだったら勝手にくるっと回って元に戻らないといけない。
-そのためにはクリックイベント内からカードが回るアニメーションを分離・・
-あ、もう分離されてるかな・・まあ、それはそれでいいんだけど。
-スコアんとこはまた例の0～9の切り抜き使うかな・・反則だけど。
-
-FAILEDっていうstateを設けてその間に回転させるとか・・入力不可にして。
-card_list[i] == card_list[j] のとき正解、!=のときはずれ～
-1枚めくったら記録して、kindを。で、それと比較する感じかな・・
-
-FAILEDは要らないか？REVERSEが継続すれば済む話。
-失敗してからめくったカードの反転が始まるまでに1～2秒くらい欲しい。
-
-まあ、単純にした方がいいかな・・そんな複雑なの作りたくないし思いつかないですから・・
-
-Correct!で青い文字。Failed...で赤い文字。表示される間にカードが反転したりする感じ。
-こういうの全部state処理で他の操作できないようにする。つまり、
-PLAYのときしかカードめくり出来ないように・・
-
-変数stock: 初期値は-1で、カードをめくるとその数（0～9）が記録される。
-同時にその変数のあった場所も記録しておくべき（pos）。
-その状態でめくれていないカードをめくると照合が行われる。
-照合の結果、一致すればめくれたままそのまま。
-一致しなければそれらのカードは元に戻る。だから位置の記録が必要。
-
-state REVERSEって要らないね・・countが正かどうかでバリデーションかければ済む話。
-
-とりあえず、めくれてるカードはクリックしても戻らないようにするか・・（その操作は存在しえないので）
-ん？？
-あ、そうか、クリックでは戻らないけど、自動的に戻るんだっけ。
-
-今、クリックの後が単に「reverse_anim」ってなってて、ここを、
-・stockが空の時：めくったカードの位置と種類を記録してreverse_anim」
-・stockが埋まってる時：照合して、合ってる場合→めくる、合ってる！のインターバル（表示、得点加算）、次の操作。
-間違ってる場合→間違ってる！のインターバル、元に戻す１、元に戻す２。
-いずれの場合もstockは空にする（リセット）
-こういうのクラスで書くと楽そうだな・・てかPygameならこういうの簡単に作れるんじゃない・・
-
-最後に、リセットボタンを用意したい。
-
 もうちょっと考え直すことに。
 gameLoopにして・・2枚めくったら、判定に落とす。
 合ってる場合はある程度その、文字表示して、スコア加算して、
@@ -48,4 +5,14 @@ gameLoopにして・・2枚めくったら、判定に落とす。
 TITLE, PLAY, REVERSE, JUDGE.
 REVERSEしてまたPLAYに戻る。
 resetして最初から、スコア戻す、というのもやる。
-繰り返しの単位は50msで。だから50msごとに1回ずつ描画する感じ。 
+繰り返しの単位は50msで。だから50msごとに1回ずつ描画する感じ。
+
+OK.できたけどつまんないな・・
+モバイルはこれでいいよ。これとは別にデスクトップ作ろう。
+あ、モバイルの方は、お手付き回数の上限を決めて（10回とか）、
+残ってたら再びカード並べてやり直せるようにするとか。
+回復とかして。
+んで、何回もやってお手付き0になると終了、スコアを競うとか。
+デスクトップは難易度選べるようにしたら面白そう（0~9, 0~19, 0~29）
+画像も数とか絵柄とか色々用意するとか。
+フィギュアの画像とか？
